--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,17 @@ language: java
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y junit
+  - sudo apt-get install -y junit4
 
 install: junit
 jdk:
   - oraclejdk8
   - oraclejdk7
+
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 script: ant test
