--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y junit4
 
-install: junit4
+install: ant deps
 jdk:
   - oraclejdk8
   - oraclejdk7
